--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,5 @@ streamlit-option-menu==0.3.6
 numpy==1.26.4
 scikit-learn==1.3.2
 reportlab==4.1.0
-qrcode[pil]==7.4.2
+qrcode==7.4.2
 Pillow==10.2.0
-setuptools<70
-wheel
